@@ -67,5 +67,6 @@ FCT_BGN()
     FCT_FIXTURE_SUITE_END();
 
     printf("\n***TESTS ARE SUPPOSED TO REPORT FAILURES***\n");
+    FCT_EXPECTED_FAILURES(2);
 }
 FCT_END();
